methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {left()}; if (!isFacingTrail()) {right(); right()}}; forward()}
                                                                          ^SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {left()}; if (!isFacingTrail()) {right(); right()}}; forward()}
                                                                                                         ^SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {left()}; if (!isFacingTrail()) {right(); right()}}; forward()}
                                                                                                                                         ^